deploy/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: "jukra7k/server:v8"
          ports:
            - containerPort: 1337  # Expose port inside the container

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP 
  selector:
    app: server
  ports:
    - name: http  # Add a name for the port
      protocol: TCP
      port: 1337
      targetPort: 1337
